--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
         <header class="header theiaStickySidebar">
           <div class="content">
             <h1>Sean Joseph Parker</h1>
-            <span class="lead">Computer Science Student</span>
+            <span class="lead">AI&amp;ML Enginneer @ Apple</span>
 
             <div class="about-text">
-              <p>Industrious and attentive Computer Science student with an interest in Artificial Intelligence.
-                Passionate competitive programmer, software developer and space enthusiast.</p>
             </div>
             <ul class="social-icon">
               <li>
@@ -66,7 +64,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="section-title">
-                    <h2>Experience</h2>
+                    <h2>Work</h2>
                   </div>
                 </div>
               </div>
@@ -74,10 +72,31 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="content-item">
+                    <small>September 2021 - Present</small>
+                    <h3>Apple</h3>
+                    <h4>AI&amp;ML Engineer</h4>
+                    <p>United Kingdom, London</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>June 2020 - September 2020</small>
+                    <h3>Improbable</h3>
+                    <h4>Software Engineering Internship</h4>
+                    <p>United Kingdom, London</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
                     <small>June 2019 - September 2019</small>
                     <h3>Apple</h3>
-                    <h4>IS&amp;T Internship</h4>
-
+                    <h4>Software Engineering Internship</h4>
                     <p>United Kingdom, London</p>
                   </div>
                 </div>
@@ -101,18 +120,21 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="content-item">
+                    <small>2020-2021</small>
+                    <h3>M.Phil Advanced Computer Science</h3>
+                    <h3>University of Cambridge</h3>
+                    <div>Worked with <a href="https://www.cl.cam.ac.uk/~ey204">Eiko Yoneki</a> and <a
+                        href="https://www.turing.ac.uk/people/doctoral-students/sami-alabed">Sami Alabed</a> on
+                      model-based reinforcement learning to optimise deep neural network architectures</p>
+                      <p>Graduated with Distinction (82%)
+                    </div>
+                  </div>
+                  <div class="content-item">
                     <small>2017 - 2020</small>
                     <h3>BSc(Hons) Computer Science</h3>
-                    <h4>University of Manchester</h4>
+                    <h3>University of Manchester</h3>
 
-                    <p>United Kingdom, Manchester</p>
-                  </div>
-                  <!-- education-item -->
-                  <div class="content-item">
-                    <small>2010 - 2017</small>
-                    <h4>St Ambrose College</h4>
-
-                    <p>United Kingdom, Hale Barns</p>
+                    <div>Graduated with First Class (84%)</div>
                   </div>
                 </div>
               </div>
@@ -147,7 +169,8 @@
                     <h3>Dev Team</h3>
                     <h4>UniCS</h4>
                     <h5>University of Manchester</h5>
-                    <p>Created Hackathon Hub used by over 400 people across two hackathons</p>
+                    <p>Created a suite of projects to support hackathons. Used by over 1000 people across four in-person
+                      and online Hackathons.</p>
                     <div class="github-card text-center" data-github="hacksoc-manchester/Hackathon_Attendee_Hub"
                       data-width="400" data-height="" data-theme="default"></div>
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
